--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ h1{
     align-items: center;
     flex-direction: column;
     gap: 3rem;
+    border-radius: 8px;
 }
 .contenedor-input{
     width: 100%;
