--- a/src/index.css
+++ b/src/index.css
@@ -1,93 +1,107 @@
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-contenido {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .modal-contenido button{
-    background-color: #1d3cf0;
-    color: #ffff;
-    font-weight: 700;
-    border-radius: 5px;
-    width: 200PX; 
-    height: 40px;
-  }
-  
-  @media screen and (max-width: 620px) {
-    .contenedor-padre {
-      width: 100% !important;
-     
-  }
-    input {
-        width: 100%;
-        font-size: 15px !important;
-    }
-
-    .btn-input{
-      font-size: 17px !important;
-      width: 30% !important;
-  }
-  li{
-    font-size: 19px;
-    font-weight: 700;
-    width: 100%;
+/* ******************seccion perfil************** */
+.profile-card {
+    width: 80%;
+    height: 600px;
+  margin: 40px auto;
+  background: #1f1f2e;
+  padding: 30px;
+  border-radius: 20px;
+  text-align: center;
+  color: white;
+  box-shadow: 0 0 20px rgba(0,0,0,0.3);
+  font-family: 'Segoe UI', sans-serif;
 }
-.mostrarUsuarios {
-  justify-content: space-between;
+
+.profile-img {
+  width: 250px;
+  height: 250px;
+  object-fit: fill;
+  border-radius: 50%;
+  border: 4px solid #4e9eff;
+  margin-bottom: 20px;
 }
-} 
-@media screen and (max-width: 480px) {
 
-  .btn-input{
-    font-size: 16px !important;
-    width: 50% !important;
+.name {
+  font-size: 26px;
+  margin: 10px 0;
 }
-li{
-  font-size: 19px;
-  font-weight: 700;
-  width: 100%;
+
+.profession {
+  font-size: 18px;
+  color: #b0b0b0;
+  margin-bottom: 20px;
 }
-.mostrarUsuarios {
-justify-content: space-between;
+
+.tech-stack {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  justify-content: center;
+  margin-bottom: 20px;
 }
-} 
 
- 
 
-@media screen and (max-width: 350px) {
-  input {
-      width: 100%;
-      font-size: 15px !important;
-  }
-  li{
-  font-size: 15px !important;
-    font-weight: 700;
+.tech-stack span {
+  /* background-color: #2b2b3a; */
+  padding: 6px 12px;
+  border-radius: 12px;
+  font-size: 14px;
 }
-  .btn-input{
-    font-size: 15px !important;
-    width: 40% !important;
-  
-}}
+.react{
+    background: rgb(50, 82, 223);
+}
+.node{
+    background: #015c10;
+}
+.JavaScript{
+background: #d3b429;
+}
+.GitHub{
+    background: #000;
+}
+.SQLServer{
+    background: #ffffff;
+    color: red;
+}
+.Azure{
+    background: #16a9a9;
+}
+.CSS{
+    background: #1d3fc9;
+}
+.HTML{
+    background: #ec7c04;
+}
+.Bootstrap{
+    background: #a605f0;
+}
+.Postman{
+    background: #eb6a07;
 
+}
+.buttons .btn {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: white;
+  background: #4e9eff;
+  transition: background 0.3s;
+}
 
+.buttons .btn:hover {
+  background: #1476aac9;
+}
 
+.btn.secondary {
+  background: #555;
+}
 
+.btn.secondary:hover {
+  background: #777;
+}
+
+.buttons .whatsapp{
+    background: #2dbc17;
+}
