--- a/src/index.css
+++ b/src/index.css
@@ -105,3 +105,7 @@ background: #d3b429;
 .buttons .whatsapp{
     background: #2dbc17;
 }
+
+
+
+/* ***********************contactos************************* */
