--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@
 }
 
 .profile-img {
-  width: 250px;
-  height: 250px;
+  min-width: 300px;
+  height: 300px;
   object-fit: fill;
   border-radius: 50%;
   border: 4px solid #4e9eff;
@@ -38,6 +38,10 @@
   gap: 8px;
   justify-content: center;
   margin-bottom: 20px;
+}
+a{
+cursor: pointer;
+text-decoration: none;
 }
 
 
@@ -107,5 +111,3 @@ background: #d3b429;
 }
 
 
-
-/* ***********************contactos************************* */
