portafolio en 100% ingles

--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,9 @@ background: #d3b429;
     background: #eb6a07;
 
 }
+.ingles{
+  background: #0ab429;
+}
 .buttons .btn {
   display: inline-block;
   padding: 10px 20px;
