--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,19 @@
     width: 80%;
     height: 600px;
   margin: 40px auto;
-  background: #1f1f2e;
+  background: #1f1f2e80;
   padding: 30px;
   border-radius: 20px;
   text-align: center;
   color: white;
   box-shadow: 0 0 20px rgba(0,0,0,0.3);
   font-family: 'Segoe UI', sans-serif;
+}
+.profile-card:hover{
+  
+  background: #1f1f2e;
+ transition: all 1s;
+
 }
 
 .profile-img {
@@ -120,7 +126,7 @@ background: #d3b429;
     height: auto;
     padding: 20px;
     margin: 20px auto;
-    /* overflow: hidden; */
+
   }
 
   .profile-img {
@@ -153,4 +159,38 @@ background: #d3b429;
     margin: 8px 0;
     font-size: 14px;
   }
+}
+
+
+
+
+/* ***************************************** */
+
+/* App.css */
+.video-container {
+  position: relative;
+  width: 100%;
+  height: 100%; /* pantalla completa */
+  overflow: hidden;
+}
+
+.background-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+  z-index: -1; /* para que quede atrás */
+}
+
+.contenido {
+  position: relative;
+  z-index: 1;
+  color: white;
+  text-align: center;
+  padding-top: 30vh;
 }
