--- a/src/index.css
+++ b/src/index.css
@@ -169,9 +169,10 @@ background: #d3b429;
 /* App.css */
 .video-container {
   position: relative;
-  width: 100%;
-  height: 100%; /* pantalla completa */
+  /* width: 100%;
+  height: 100%; pantalla completa */
   overflow: hidden;
+
 }
 
 .background-video {
